--- a/app/src/main/res/layout/buy_inputs_dialog_input.xml
+++ b/app/src/main/res/layout/buy_inputs_dialog_input.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
@@ -20,7 +21,8 @@
             android:padding="12dp"
             android:src="@drawable/ic_cancel_white_24dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
 
 
         <ImageView
@@ -51,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/josefin_sans"
-            android:text="@string/sign_up"
+            android:text="Security Questions"
             android:textColor="@color/colorPrimary"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -87,7 +89,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fragment_title_padding_10"
             android:background="@drawable/edittext_corner"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -128,6 +131,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/dialog_input"
             android:layout_margin="10dip"
+            android:visibility="gone"
             android:background="@drawable/rounded_corners_button">
 
             <androidx.appcompat.widget.AppCompatButton
@@ -154,8 +158,232 @@
             </ImageView>
 
         </FrameLayout>
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_20dp"
+            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginEnd="@dimen/dimen_20dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:text="First Security Question"
+                    android:textSize="@dimen/dimen_16sp" />
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/edittext_corner"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="3.4dp">
+
+                    <Spinner
+                        android:id="@+id/sp_first_security_qn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:entries="@array/spinner_first_security_questions"
+                        android:gravity="center"
+                        android:spinnerMode="dropdown" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="10dp"
+                        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
+                        tools:ignore="VectorDrawableCompat" />
+                </RelativeLayout>
+                <EditText
+                    android:id="@+id/etxt_first_security_qn"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/edittext_corner"
+                    android:fontFamily="@font/josefin_sans"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="#000"
+                    android:layout_marginTop="10dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginTop="15dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:text="Second Security Question"
+                    android:textSize="@dimen/dimen_16sp" />
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/edittext_corner"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="3.4dp">
+
+                    <Spinner
+                        android:id="@+id/sp_second_security_qn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:entries="@array/spinner_second_security_questions"
+                        android:gravity="center"
+                        android:spinnerMode="dropdown" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="10dp"
+                        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
+                        tools:ignore="VectorDrawableCompat" />
+                </RelativeLayout>
+                <EditText
+                    android:id="@+id/etxt_second_security_qn"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/edittext_corner"
+                    android:fontFamily="@font/josefin_sans"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="#000"
+                    android:layout_marginTop="10dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginTop="15dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:text="Third Security Question"
+                    android:textSize="@dimen/dimen_16sp" />
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/edittext_corner"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="3.4dp">
+
+                    <Spinner
+                        android:id="@+id/sp_third_security_qn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:entries="@array/spinner_third_security_questions"
+                        android:gravity="center"
+                        android:spinnerMode="dropdown" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="10dp"
+                        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
+                        tools:ignore="VectorDrawableCompat" />
+                </RelativeLayout>
+                <EditText
+                    android:id="@+id/etxt_third_security_qn"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/edittext_corner"
+                    android:fontFamily="@font/josefin_sans"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="#000"
+                    android:layout_marginTop="10dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+
+
+            <Button
+                android:id="@+id/btn_cancel_security_qn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:paddingEnd="10dp"
+                android:background="@drawable/round_button_red"
+                android:text="@string/cancel"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:drawableEnd="@drawable/ic_right_chevron" />
+            <Button
+                android:id="@+id/btn_submit_security_qn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="15dp"
+                android:paddingEnd="10dp"
+                android:background="@drawable/round_button_dark_green"
+                android:text="@string/submit"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:drawableEnd="@drawable/ic_right_chevron"/>
+        </LinearLayout>
+        </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
     </LinearLayout>
 
 
