--- a/app/src/main/res/layout/fragment_shop_orders.xml
+++ b/app/src/main/res/layout/fragment_shop_orders.xml
@@ -18,9 +18,11 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </com.google.android.material.appbar.AppBarLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="?actionBarSize"
         android:orientation="vertical"
         android:layout_below="@id/appbar">
 
