--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="?attr/actionBarSize">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/main_Toolbar"
+        android:id="@+id/add_address_Toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         app:popupTheme="@style/AppTheme.PopupOverlay"
