--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -100,7 +100,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="0dp"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
 
                     <TextView
@@ -300,7 +300,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <LinearLayout
                     android:id="@+id/layout_bank_beneficiary_name"
@@ -308,7 +308,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -332,7 +333,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
 
                 <LinearLayout
