--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="?attr/actionBarSize">
+    android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/add_address_Toolbar"
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar_address_Toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/add_address_Toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -24,7 +31,7 @@
         app:layout_constraintBottom_toTopOf="@+id/autocomplete_fragmentlaout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/appbar_address_Toolbar">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -76,6 +83,7 @@
                     android:inputType="phone"
                     android:paddingStart="15dp"
                     android:paddingEnd="15dp"
+                    android:maxLength="10"
                     android:textAlignment="viewStart"
                     android:textColor="@color/textColorSecondary"
                     android:textColorHint="@color/textColorPrimaryLight" />
