Sales Card Fixes

--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -107,6 +107,7 @@
                         android:text="@string/order_payment_method"
                         android:textColor="#B9B9B9" />
                     <TextView
+                        android:id="@+id/product_price"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
