--- a/app/src/main/res/layout/fragment_shop_sales.xml
+++ b/app/src/main/res/layout/fragment_shop_sales.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/windowBackground">
+    android:background="@color/windowBackground"
+    android:paddingBottom="?attr/actionBarSize">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
