--- a/app/src/main/res/menu/bottom_navigation_buy_and_sell_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_buy_and_sell_menu.xml
@@ -13,6 +13,7 @@
         android:enabled="true"
         android:icon="@drawable/ic_sell"
         android:title="SELL"
+        android:visible="false"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/walletOrdersFragment"
