Changed app logo and drawable for orders

--- a/app/src/main/res/drawable/order_status_pending_background.xml
+++ b/app/src/main/res/drawable/order_status_pending_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FDCC6B" />
+    <solid android:color="#ff8300" />
     <corners
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp" />
