--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+  <group android:scaleX="0.46291667"
+      android:scaleY="0.46291667"
+      android:translateX="20.67"
+      android:translateY="22.973011">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M17.13,90.68l-0.85,0.34c-0.18,-0.37 -0.34,-0.73 -0.5,-1.1 0.44,0.26 0.88,0.52 1.35,0.76"
+        android:fillColor="#110d48"/>
+    <path
+        android:pathData="M144,81.38l-9.65,5.46 -2.93,-5.19a54.25,54.25 0,0 1,-3.67 11.16,65.45 65.45,0 0,1 -4,8.1A66.31,66.31 0,0 1,0 67.71V66.65a66.68,66.68 0,0 1,0.51 -7.26,0.69 0.69,0 0,1 0,-0.13c0,-0.28 0.07,-0.55 0.12,-0.83a141.46,141.46 0,0 1,13.09 -7.57A131.25,131.25 0,0 1,74.88 36a144.34,144.34 0,0 1,38.42 5.28l0.07,0c0.59,0.15 1.16,0.32 1.7,0.47h0A101.07,101.07 0,0 1,129.34 47a31,31 0,0 0,-11.56 0.7c-11.64,2.71 -23.13,10.52 -29.25,15.2C85.69,65 84,66.52 84,66.52 53.07,95.48 30.82,98 17.13,90.68c-0.47,-0.24 -0.91,-0.5 -1.35,-0.76 0.16,0.37 0.32,0.73 0.5,1.1a55.21,55.21 0,0 0,97.22 5.39,54.63 54.63,0 0,0 3.11,-5.86c0.19,-0.42 0.37,-0.82 0.55,-1.24 0.46,-1 0.88,-1.91 1.27,-2.89A42.21,42.21 0,0 0,121 77.27L114,81.21l-5.46,-9.65 22.64,-12.81Z"
+        android:fillColor="#110d48"/>
+    <path
+        android:pathData="M124.83,35.68a160.5,160.5 0,0 0,-16.27 -3.57A163.6,163.6 0,0 0,17.08 42.75l-1.38,0.58C11.32,45.23 6.34,47.61 1.9,50a0.61,0.61 0,0 1,0 -0.13,66.2 66.2,0 0,1 122.9,-14.19"
+        android:fillColor="#2e84be"/>
+  </group>
 </vector>
