--- a/app/src/main/res/drawable/order_status_approved_background.xml
+++ b/app/src/main/res/drawable/order_status_approved_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#00FF00" />
+    <solid android:color="#2ebeb0" />
     <corners
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp" />
