--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,24 +10,44 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:alpha=".7"
-        android:src="@drawable/emaishapay_logo_icon"
+        android:src="@drawable/new_logo"
         android:layout_width="match_parent"
         android:paddingBottom="@dimen/dimen_20dp"
         android:layout_height="140dp"
         android:layout_centerInParent="true"/>
 
-    <TextView
-        android:id="@+id/logo_title"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_app_emaisha_pay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="eMaisha Pay"
-        android:gravity="center"
-        android:layout_below="@id/logo"
-        android:textSize="40sp"
-        android:textColor="#110D47"
-        android:textStyle="bold"
-        android:alpha=".8"/>
+        android:layout_below="@id/logo">
+
+        <ImageView
+            android:id="@+id/smaller_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_asset_2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/logo_title"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"/>
+
+        <TextView
+            android:id="@+id/logo_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Maisha Pay"
+            android:textColor="#110D47"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:alpha=".95"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
