Changes made to the logos

--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -24,9 +24,9 @@
 
         <ImageView
             android:id="@+id/smaller_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_asset_2"
+            android:layout_width="23dp"
+            android:layout_height="20dp"
+            android:src="@drawable/logo_vector"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/logo_title"
             app:layout_constraintTop_toTopOf="parent"
