--- a/app/src/main/res/layout/buy_inputs_dialog_input.xml
+++ b/app/src/main/res/layout/buy_inputs_dialog_input.xml
@@ -23,14 +23,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="invisible"/>
-
+    <LinearLayout
+        android:id="@+id/logo_bg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="110dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/round_white_badge">
 
         <ImageView
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="110dp"
-            android:src="@drawable/ic_logo"/>
+           android:layout_margin="20dp"
+            android:src="@drawable/logo_vector"/>
+    </LinearLayout>
 
     </LinearLayout>
 
