--- a/app/src/main/res/layout/buy_inputs_dialog_maintenance.xml
+++ b/app/src/main/res/layout/buy_inputs_dialog_maintenance.xml
@@ -37,7 +37,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/emaishapay_logo_icon"/>
+            android:src="@drawable/logo_vector"/>
         <TextView
             android:id="@+id/maintenanceText"
             android:text="Dummy text"
