--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -32,19 +32,28 @@
 
                 </RelativeLayout>
 
-                <ImageView
-                    android:id="@+id/logo"
+                <LinearLayout
+                    android:id="@+id/logo_bg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_margin="20dp"
-                    android:src="@drawable/ic_logo" />
+                    android:background="@drawable/round_white_badge">
+
+                <ImageView
+                    android:id="@+id/logo"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="20dp"
+                    android:src="@drawable/logo_vector"
+                    android:gravity="center"/>
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/login_form_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/logo"
+                    android:layout_below="@id/logo_bg"
                     android:layout_margin="15dp"
                     android:background="@drawable/background_custom_dialog"
                     android:gravity="center_horizontal"
